@@ -752,6 +752,7 @@ class SkinTemplate extends Skin {
 					);
 				}
 			}
+			
 
 			wfRunHooks( 'SkinTemplateTabs', array( &$this , &$content_actions ) )	;
 		} else {
